# Projeto_SOE

./: CMakeLists.txt  README.md  detector_fadiga.py  fastFaceLandmarkDetection.cpp  landmark.py
Código cpp/: códigocpp.cpp  fastFaceLandmarkDetection.cpp
código-fonte/: fastFaceLandmarkDetection.cpp
código-fonte/Codigo cpp/: build.sh  fastFaceLandmarkDetection.cpp
código-fonte/Código python/: landmark_reconhecimento_facial.py
código-fonte/dlibAndModel/dlib/dlib/opencv/: cv_image.h
